--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
         }
     },
     "lint-staged": {
-        "*.js": ["prettier --write", "git add"]
+        "*.js": ["prettier --write"]
     }
 }
